updated ruby script to average the analog samples

--- a/rails/garden/app/views/graph/index.html.erb
+++ b/rails/garden/app/views/graph/index.html.erb
@@ -3,6 +3,8 @@
 
 <div id="container" style="height: 500px; min-width: 500px"></div>
 
+<h1><%= @current %></h1>
+
 <script type='text/javascript'>
 Highcharts.theme = {
    colors: ['#058DC7', '#50B432', '#ED561B', '#DDDF00', '#24CBE5', '#64E572', '#FF9655', '#FFF263', '#6AF9C4'],
