--- a/rails/garden/app/views/graph/index.html.erb
+++ b/rails/garden/app/views/graph/index.html.erb
@@ -3,7 +3,8 @@
 
 <div id="container" style="height: 500px; min-width: 500px"></div>
 
-<h1><%= @current %></h1>
+<h1>Last Sensor Datapoint:</h1>
+<h2><%= @current.reading %> @ <%= @current.time_stamp %></h2>
 
 <script type='text/javascript'>
 Highcharts.theme = {
